# financial-etl-pipeline

./: Base_Trades.xlsx  README.md  config.yaml  main.py  pyproject.toml  test.py
data/: financial_risk.db
src/data_providers/: repository.py  yahoo_provider.py
src/financial_monitoring_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/processors/: calculator.py
tests/: test_math.py
