[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "financial_monitoring_engine"
version = "0.1.0"
description = "Motor de risco e monitoramento financeiro"
authors = [{name = "Fernando", email = "seu_email@exemplo.com"}]
dependencies = [
    "pandas",
    "yfinance",
    "numpy"
]

# Aqui est치 a m치gica: dizemos que o c칩digo fonte est치 na pasta src
[tool.setuptools.packages.find]
where = ["src"]